--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div class="app-container app-theme-white body-tabs-shadow">
+<div class="app-container app-theme-blac body-tabs-shadow w-100 mx-auto">
     <div class="app-container">
         <div class="h-100">
             <div class="h-100 no-gutters row">
@@ -46,7 +46,7 @@
                 </div>
 
 
-                <div class="h-100 d-block bg-white justify-content-center align-items-center col-md-12 col-lg-4">
+                <div class="h-100 d-block bg-white justify-content-center align-items-center col-md-12 col-lg-4" style="overflow-y: scroll">
                     <div class="mx-auto app-login-box col-md-10">
                         <div class="app-login-logo mx-auto mb-3" style="margin: 2%">
                             <img class="logo96" src="assets/images/glalogo96.png" alt="logo"/>
